src/query/ast/tests/it/testdata/expr-error.txt
---------- Input ----------
5 * (a and ) 1
---------- Output ---------
error: 
  --> SQL:1:8
  |
1 | 5 * (a and ) 1
  | -   -  ^^^ expecting more subsequent tokens
  | |   |   
  | |   while parsing `(<expr> [, ...])`
  | while parsing expression


---------- Input ----------
a + +
---------- Output ---------
error: 
  --> SQL:1:5
  |
1 | a + +
  | -   ^ expecting more subsequent tokens
  | |    
  | while parsing expression


---------- Input ----------
CAST(col1 AS foo)
---------- Output ---------
error: 
  --> SQL:1:14
  |
1 | CAST(col1 AS foo)
  | ----         ^^^
  | |            |
  | |            expected `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `SMALLINT`, or 29 more ...
  | |            while parsing type name
  | while parsing `CAST(... AS ...)`
  | while parsing expression


---------- Input ----------
1 a
---------- Output ---------
error: 
  --> SQL:1:3
  |
1 | 1 a
  |   ^


---------- Input ----------
CAST(col1)
---------- Output ---------
error: 
  --> SQL:1:10
  |
1 | CAST(col1)
  | ----     ^ expected `AS`, `,`, `(`, `.`, `IS`, `NOT`, or 54 more ...
  | |         
  | while parsing `CAST(... AS ...)`
  | while parsing expression


---------- Input ----------
G.E.B IS NOT NULL AND
            col1 NOT BETWEEN col2 AND
                AND 1 + col3 DIV sum(col4)
---------- Output ---------
error: 
  --> SQL:3:17
  |
1 | G.E.B IS NOT NULL AND
  | - while parsing expression
2 |             col1 NOT BETWEEN col2 AND
  |                  --- while parsing `[NOT] BETWEEN ... AND ...`
3 |                 AND 1 + col3 DIV sum(col4)
  |                 ^^^ expected more tokens for expression


